fix mobile cast details scrollbar

--- a/ng-hw8/ng-usc-films/src/app/app.component.css
+++ b/ng-hw8/ng-usc-films/src/app/app.component.css
@@ -1,6 +1,6 @@
 #mask {
   width: 100%;
-  height: 200vh;
+  height: 300vh;
   position: absolute;
   display: none;
 }
