--- a/ng-hw8/ng-usc-films/src/app/components/footer/footer.component.css
+++ b/ng-hw8/ng-usc-films/src/app/components/footer/footer.component.css
@@ -31,7 +31,8 @@
     margin-left: 15px;
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 12px;
+    font-size: 14px;
+    padding-top: 15%;
   }
 
   .footer-container {
